# causal-ML

./: README.md  analysis.py  descriptive.py  dev.py  functions.py  summary.py
data/: data_group_1.csv  distance_to_tournament.parquet
microeconometrics/: pyproject.toml
microeconometrics/microeconometrics/: descriptive.py  ols.py  preprocessing.py
microeconometrics/scripts/: 01_prepare_data.py  02_describe_data.py  03_fit_models.py  analysis.py  descriptive.py  dev.py  fit_models.R
microeconometrics/src/microeconometrics/: descriptive.py  preprocessing.py
microeconometrics/submission/: functions.py  main.py  plots.R
microeconometrics/tests/: test_ols.py
plots/: dev.R  plotting.R  tables.R
