[tool.poetry]
name = "microeconometrics"
version = "0.1.0"
description = "Package for the microeconometrics self-studies"
authors = ["FBenkhalifa <florian.benkhalifa@student.unisg.ch>"]

[tool.poetry.dependencies]
python = "3.9"
sklearn = "^0.0.post4"
scipy = "^1.10.1"
geopy = "^2.3.0"
pycountry = "^22.3.5"
tqdm = "^4.65.0"
pandas = "^2.0.1"
catboost = "^1.2"
doubleml = "^0.6.1"
statsmodels = "^0.14.0"


[tool.poetry.dev-dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
